--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "luxon": "^1.27.0",
-    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
