--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "mangadex-react",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "npm": "7.5.1",
+    "node": "16.3.0"
+  },
   "dependencies": {
     "@craco/craco": "^6.1.2",
     "@tailwindcss/line-clamp": "^0.2.1",
