--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mangadex-react",
   "version": "0.1.0",
   "private": true,
-  "engines":{
+  "engines": {
     "npm": "7.5.1",
     "node": "16.3.0"
   },
@@ -20,12 +20,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "serve": "^12.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "serve -S build",
     "build": "craco build",
-    "test": "craco test",
+    "test": "craco start",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
