--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "npm": "7.5.1",
+    "npm": "7.15.1",
     "node": "16.3.0"
   },
+  "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
     "@craco/craco": "^6.1.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.35",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
+    "electron-is-dev": "^2.0.0",
+    "http-server": "^0.12.3",
     "luxon": "^1.27.0",
+    "postcss": "^7.0.35",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.0.0",
@@ -24,13 +27,17 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "serve": "^12.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "serve -S build",
+    "start": "craco start",
     "build": "craco build",
-    "test": "craco start",
-    "eject": "react-scripts eject"
+    "test": "craco test",
+    "eject": "react-scripts eject",
+    "electron-dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-pack": "electron-builder -c.extraMetadata.main=build/electron.js",
+    "preelectron-pack": "craco build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +58,10 @@
     ]
   },
   "devDependencies": {
-    
+    "concurrently": "^6.2.0",
+    "cross-env": "^7.0.3",
+    "electron": "^13.1.4",
+    "electron-builder": "^22.11.7",
+    "wait-on": "^5.3.0"
   }
 }
