--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mangadex-react",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "private": true,
   "author": {
     "name": "Saymon600",
@@ -20,6 +20,7 @@
     "luxon": "^1.27.0",
     "postcss": "^7.0.35",
     "react": "^17.0.2",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.0.0",
     "react-router-dom": "^5.2.0",
