--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mangadex-react",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "private": true,
   "author": {
     "name": "Saymon600",
@@ -20,7 +20,6 @@
     "luxon": "^1.27.0",
     "postcss": "^7.0.35",
     "react": "^17.0.2",
-    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.0.0",
     "react-router-dom": "^5.2.0",
@@ -65,6 +64,7 @@
     "cross-env": "^7.0.3",
     "electron": "^13.1.4",
     "electron-builder": "^22.11.7",
-    "wait-on": "^5.3.0"
+    "wait-on": "^5.3.0",
+    "immer": ">=9.0.6"
   }
 }
