--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mangadex-react",
-  "version": "0.2.12",
+  "version": "0.2.13",
   "private": true,
   "author": {
     "name": "Saymon600",
@@ -73,6 +73,7 @@
     "sockjs": ">=0.3.20",
     "react-dev-utils": ">=11.0.4",
     "node-notifier": ">=8.0.1",
-    "node-forge": ">=1.0.0"
+    "node-forge": ">=1.0.0",
+    "nanoid": ">=3.1.31"
   }
 }
