--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mangadex-react",
-  "version": "0.2.13",
+  "version": "0.2.14",
   "private": true,
   "author": {
     "name": "Saymon600",
@@ -14,7 +14,7 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.4.2",
     "axios": "^0.21.1",
     "electron-is-dev": "^2.0.0",
     "luxon": "^1.27.0",
@@ -23,7 +23,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.0",
     "react-select": "^4.3.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
     "web-vitals": "^1.1.2"
@@ -64,16 +64,16 @@
     "cross-env": "^7.0.3",
     "electron": "^13.1.4",
     "electron-builder": "^22.11.7",
-    "wait-on": "^5.3.0",
+    "follow-redirects": ">=1.14.7",
     "immer": ">=9.0.6",
     "merge": ">=2.1.1",
-    "serialize-javascript": ">=3.1.0",
-    "follow-redirects": ">=1.14.7",
-    "postcss": ">=8.2.13",
-    "sockjs": ">=0.3.20",
-    "react-dev-utils": ">=11.0.4",
-    "node-notifier": ">=8.0.1",
+    "nanoid": ">=3.1.31",
     "node-forge": ">=1.0.0",
-    "nanoid": ">=3.1.31"
+    "node-notifier": ">=8.0.1",
+    "postcss": ">=8.2.13",
+    "react-dev-utils": ">=11.0.4",
+    "serialize-javascript": ">=3.1.0",
+    "sockjs": ">=0.3.20",
+    "wait-on": "^5.3.0"
   }
 }
