--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mangadex-react",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "private": true,
   "author": {
     "name": "Saymon600",
@@ -49,7 +49,7 @@
     "cross-env": "^7.0.3",
     "electron": "^16.0.8",
     "electron-builder": "^22.14.5",
-    "follow-redirects": ">=1.14.7",
+    "follow-redirects": ">=1.14.8",
     "immer": ">=9.0.6",
     "merge": ">=2.1.1",
     "nanoid": ">=3.1.31",
@@ -74,6 +74,8 @@
     "react-markdown": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
-    "react-select": "^4.3.1"
+    "react-select": "^4.3.1",
+    "@svgr/core": "^6.2.1",
+    "@svgr/plugin-svgo": "6.2.0"
   }
 }
