--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mangadex-react",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "private": true,
   "author": {
     "name": "Saymon600",
@@ -58,6 +58,7 @@
     "node-forge": ">=1.0.0",
     "node-notifier": ">=8.0.1",
     "postcss": "^8.4.5",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dev-utils": ">=11.0.4",
     "react-dom": "^17.0.2",
